--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "vim/vim.symlink/bundle/ragtag"]
 	path = vim/vim.symlink/bundle/ragtag
 	url = http://github.com/tpope/vim-ragtag
+[submodule "vim/vim.symlink/bundle/matchtag"]
+	path = vim/vim.symlink/bundle/matchtag
+	url = https://github.com/gregsexton/MatchTag.git
