--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vim/vim.symlink/bundle/matchtag"]
 	path = vim/vim.symlink/bundle/matchtag
 	url = https://github.com/gregsexton/MatchTag.git
+[submodule "vim/vim.symlink/bundle/vim-colors-solarized"]
+	path = vim/vim.symlink/bundle/vim-colors-solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
