--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vim/vim.symlink/bundle/vim-powerline"]
 	path = vim/vim.symlink/bundle/vim-powerline
 	url = https://github.com/Lokaltog/vim-powerline.git
+[submodule "vim/vim.symlink/bundle/vim-slime"]
+	path = vim/vim.symlink/bundle/vim-slime
+	url = http://github.com/jpalardy/vim-slime.git
