--- a/.gitmodules
+++ b/.gitmodules
@@ -33,4 +33,4 @@
 	url = https://github.com/Lokaltog/vim-powerline.git
 [submodule "vim/vim.symlink/bundle/vim-slime"]
 	path = vim/vim.symlink/bundle/vim-slime
-	url = http://github.com/jpalardy/vim-slime.git
+	url = git://github.com/jpalardy/vim-slime.git
