--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "vim/vim.symlink/bundle/mustache"]
 	path = vim/vim.symlink/bundle/mustache
 	url = git://github.com/mustache/vim-mode.git
+[submodule "vim/vim.symlink/bundle/tabular"]
+	path = vim/vim.symlink/bundle/tabular
+	url = git://github.com/godlygeek/tabular.git
