--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "vim/vim.symlink/bundle/tabular"]
 	path = vim/vim.symlink/bundle/tabular
 	url = git://github.com/godlygeek/tabular.git
+[submodule "vim/vim.symlink/bundle/vim-colors-writer"]
+	path = vim/vim.symlink/bundle/vim-colors-writer
+	url = git://github.com/nathanlong/vim-colors-writer.git
