--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "vim/vim.symlink/bundle/vim-colors-writer"]
 	path = vim/vim.symlink/bundle/vim-colors-writer
 	url = git://github.com/nathanlong/vim-colors-writer.git
+[submodule "vim/vim.symlink/bundle/vim-coffee-script"]
+	path = vim/vim.symlink/bundle/vim-coffee-script
+	url = https://github.com/kchmck/vim-coffee-script.git
