--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vim/vim.symlink/bundle/vim-colors-writer"]
 	path = vim/vim.symlink/bundle/vim-colors-writer
 	url = git://github.com/nathanlong/vim-colors-writer.git
+[submodule "vim/vim.symlink/bundle/solarized"]
+	path = vim/vim.symlink/bundle/solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
