--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "vim/vim.symlink/bundle/vim-coffe-script"]
 	path = vim/vim.symlink/bundle/vim-coffe-script
 	url = https://github.com/kchmck/vim-coffee-script.git
+[submodule "vim/vim.symlink/bundle/vimroom"]
+	path = vim/vim.symlink/bundle/vimroom
+	url = git@github.com:mikewest/vimroom.git
