--- a/.gitmodules
+++ b/.gitmodules
@@ -34,12 +34,12 @@
 [submodule "vim/vim.symlink/bundle/solarized"]
 	path = vim/vim.symlink/bundle/solarized
 	url = https://github.com/altercation/vim-colors-solarized.git
-[submodule "vim/vim.symlink/bundle/vim-coffe-script"]
-	path = vim/vim.symlink/bundle/vim-coffe-script
-	url = https://github.com/kchmck/vim-coffee-script.git
 [submodule "vim/vim.symlink/bundle/vimroom"]
 	path = vim/vim.symlink/bundle/vimroom
 	url = git@github.com:mikewest/vimroom.git
 [submodule "vim/vim.symlink/bundle/vim-hackernews"]
 	path = vim/vim.symlink/bundle/vim-hackernews
 	url = git@github.com:ryanss/vim-hackernews.git
+[submodule "vim/vim.symlink/bundle/vim-coffee-script"]
+	path = vim/vim.symlink/bundle/vim-coffee-script
+	url = git@github.com:kchmck/vim-coffee-script.git
