--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "vim/vim.symlink/bundle/vim-coffee-script"]
 	path = vim/vim.symlink/bundle/vim-coffee-script
 	url = git@github.com:kchmck/vim-coffee-script.git
+[submodule "vim/vim.symlink/bundle/matchit"]
+	path = vim/vim.symlink/bundle/matchit
+	url = git@github.com:vim-scripts/matchit.zip.git
