--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,9 @@
 [submodule "vim/vim.symlink/bundle/matchit"]
 	path = vim/vim.symlink/bundle/matchit
 	url = git@github.com:vim-scripts/matchit.zip.git
+[submodule "vim/vim.symlink/bundle/vim-javascript"]
+	path = vim/vim.symlink/bundle/vim-javascript
+	url = git@github.com:pangloss/vim-javascript.git
+[submodule "vim/vim.symlink/bundle/vim-jsx"]
+	path = vim/vim.symlink/bundle/vim-jsx
+	url = git@github.com:mxw/vim-jsx.git
