--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "vim/vim.symlink/bundle/goyo"]
 	path = vim/vim.symlink/bundle/goyo
 	url = https://github.com/junegunn/goyo.vim.git
+[submodule "vim/vim.symlink/bundle/ctrlp"]
+	path = vim/vim.symlink/bundle/ctrlp
+	url = https://github.com/ctrlpvim/ctrlp.vim.git
