--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,6 @@
 [submodule "vim/vim.symlink/bundle/nerdtree"]
 	path = vim/vim.symlink/bundle/nerdtree
 	url = http://github.com/scrooloose/nerdtree.git
-[submodule "vim/vim.symlink/bundle/command-t"]
-	path = vim/vim.symlink/bundle/command-t
-	url = http://github.com/wincent/Command-T
 [submodule "vim/vim.symlink/bundle/rails"]
 	path = vim/vim.symlink/bundle/rails
 	url = http://github.com/tpope/vim-rails
@@ -49,3 +46,6 @@
 [submodule "vim/vim.symlink/bundle/ctrlp"]
 	path = vim/vim.symlink/bundle/ctrlp
 	url = https://github.com/ctrlpvim/ctrlp.vim.git
+[submodule "vim/vim.symlink/bundle/vim-jsx"]
+	path = vim/vim.symlink/bundle/vim-jsx
+	url = https://github.com/mxw/vim-jsx.git
