--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vim/vim.symlink/bundle/vim-jsx"]
 	path = vim/vim.symlink/bundle/vim-jsx
 	url = https://github.com/mxw/vim-jsx.git
+[submodule "vim/vim.symlink/bundle/ale"]
+	path = vim/vim.symlink/bundle/ale
+	url = https://github.com/w0rp/ale.git
